force-app/main/default/objects/Outreach_Episode__c/Outreach_Episode__c.object-meta.xml
<CustomObject>
    <description>DEV-4536: Queue-ownable patient outreach episode. Primary need is modeled via Patient_Need__c.Episode__c only (Primary_Need__c omitted to avoid circular lookup deploy dependency).</description>
    <label>Outreach Episode</label>
    <nameField>
        <label>Episode Number</label>
        <type>AutoNumber</type>
        <displayFormat>OE-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Outreach Episodes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>