force-app/main/default/objects/Outreach_Episode__c/fields/Claimed_At__c.field-meta.xml
<CustomField>
    <fullName>Claimed_At__c</fullName>
    <label>Claimed At</label>
    <type>DateTime</type>
</CustomField>