force-app/main/default/objects/Outreach_Episode__c/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <label>Engagement Score</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>