force-app/main/default/objects/Outreach_Episode__c/fields/Engine_Key__c.field-meta.xml
<CustomField>
    <fullName>Engine_Key__c</fullName>
    <description>Unique external ID for outreach engine upserts.</description>
    <externalId>true</externalId>
    <label>Engine Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>