force-app/main/default/objects/Outreach_Episode__c/fields/Legacy_Primary_Case__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Primary_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bridge to the legacy Case that this episode supersedes or shadows.</description>
    <label>Legacy Primary Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Outreach Episodes (Legacy Primary)</relationshipLabel>
    <relationshipName>Outreach_Episodes_Legacy</relationshipName>
    <type>Lookup</type>
</CustomField>