force-app/main/default/objects/Outreach_Episode__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Patient Account for this outreach episode.</description>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outreach Episodes</relationshipLabel>
    <relationshipName>Outreach_Episodes</relationshipName>
    <type>Lookup</type>
</CustomField>