force-app/main/default/objects/Outreach_Episode__c/fields/Pressure__c.field-meta.xml
<CustomField>
    <fullName>Pressure__c</fullName>
    <description>Contact attempt counter for the episode (not Account Pressure Score).</description>
    <label>Attempt Count</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>