force-app/main/default/objects/Outreach_Episode__c/fields/Pressure_Score__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Score__c</fullName>
    <description>Denormalized Account.Pressure_Score__c for queue gating and display.</description>
    <label>Pressure Score</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>