force-app/main/default/objects/Outreach_Episode__c/fields/Primary_Rule_Id__c.field-meta.xml
<CustomField><fullName>Primary_Rule_Id__c</fullName><label>Primary Rule ID</label><length>100</length><required>false</required><trackHistory>false</trackHistory><type>Text</type></CustomField>