force-app/main/default/objects/Outreach_Episode__c/fields/Routing_Priority__c.field-meta.xml
<CustomField><fullName>Routing_Priority__c</fullName><label>Routing Priority</label><precision>9</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>