force-app/main/default/objects/Outreach_Episode__c/fields/Shadow__c.field-meta.xml
<CustomField>
    <fullName>Shadow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this episode is engine shadow-mode only.</description>
    <label>Shadow</label>
    <type>Checkbox</type>
</CustomField>