force-app/main/default/objects/Outreach_Episode__c/fields/Soft_Held_By__c.field-meta.xml
<CustomField>
    <fullName>Soft_Held_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User currently soft-claiming this episode for concurrency (not ownership).</description>
    <label>Soft Held By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Soft_Held_Outreach_Episodes</relationshipName>
    <type>Lookup</type>
</CustomField>