force-app/main/default/objects/Outreach_Episode__c/fields/Soft_Hold_Until__c.field-meta.xml
<CustomField>
    <fullName>Soft_Hold_Until__c</fullName>
    <description>When the soft claim expires (TTL). Cleared on release or outcome auto-release.</description>
    <label>Soft Hold Until</label>
    <type>DateTime</type>
</CustomField>