force-app/main/default/objects/Outreach_Episode__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Episode claim/lifecycle status.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unclaimed</fullName>
                <default>true</default>
                <label>Unclaimed</label>
            </value>
            <value>
                <fullName>Claimed</fullName>
            </value>
            <value>
                <fullName>Snoozed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>